--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   .penguin {
     /* Only change code below this line */
-
+    --penguin-belly: white;
     /* Only change code above this line */
     position: relative;
     margin: auto;
